# openrex

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeOptions.txt  Doxyfile  Makefile  README.md  config.mk  rex.c
data/: coordsys.mtl  coordsys.rex  oscar.rex  osm_polygons.json  sketchuptest.dae  sketchuptest.rex  template.rex
doc/: rex-spec-v1.md
extensions/: CMakeLists.txt  rex-extrusion.c
importer/: CMakeLists.txt  rex-importer.c
src/: CMakeLists.txt  argparse.c  argparse.h  config.def.h  config.h  core.c  core.h  global.h  linmath.h  list.c  list.h  rex-block-image.c  rex-block-image.h  rex-block-lineset.c  rex-block-lineset.h  rex-block-material.c  rex-block-material.h  rex-block-mesh.c  rex-block-mesh.h  rex-block-pointlist.c  rex-block-pointlist.h  rex-block-scenenode.c  rex-block-scenenode.h  rex-block-text.c  rex-block-text.h  rex-block-track.c  rex-block-track.h  rex-block-unitypackage.c  rex-block-unitypackage.h  rex-block.c  rex-block.h  rex-data-block.c  rex-data-block.h  rex-header.c  rex-header.h  rex.h  rex_core.c  rex_core.h  status.h  util.c  (+1 more)
test/: CMakeLists.txt  test_all.c
tools/: CMakeLists.txt  cJSON.c  cJSON.h  rex-asset.c  rex-dump.c  rex-extrude.c  rex-extrusion.c  rex-extrusion.h  rex-gen.c  rex-gencube.c  rex-geojson.c  rex-info.c  rex-las.c  rex-text.c  rex-view.c  slash.h  texture.h  view.frag
viewer/: CMakeLists.txt  axis.c  axis.h  bbox.h  camera.c  camera.h  engine.c  engine.h  gameengine.c  gameengine.h  material.c  material.h  mesh.c  mesh.h  mesh.vert  mesh_group.c  mesh_group.h  pointcloud.frag  pointcloud.vert  points.c  points.h  polyline.c  polyline.h  rex-view.c  scene.c  scene.h  shader.c  shader.frag  shader.h  shader.vert
viewer/shaders/: mesh.fs  pointcloud.vs  polyline.fs  polyline.vs
